--- a/mysql/分组数据.md
+++ b/mysql/分组数据.md
@@ -57,5 +57,30 @@ SELECT vend_id ,prod_name,COUNT(*) AS num_prods FROM products GROUP BY vend_id, 
 
 ## 过滤分组
 
-### **having**
+### **having**与where
+
+- having跟where很像，所有的where子句都可以用HAVING来代替
+- HVVING子句支持所有where操作符
+- **唯一的区别是where过滤行，HAVING过滤分组**
+
+### where和HAVING的执行顺序
+
+- where在数据分组前过滤，where排除的行不包含在分组中
+- having在数据分组后过滤
+
+![image-20220518195851957](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220518195851957.png)
+
+## 分组和排序
+
+一般在使用group by子句时，也应该给出order by
+
+![image-20220518200207264](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220518200207264.png)
+
+![image-20220518200214555](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220518200214555.png)
+
+## select子句的顺序
+
+![image-20220518200253031](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220518200253031.png)
+
+![image-20220518200302292](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220518200302292.png)
 
