--- a/mysql/使用视图.md
+++ b/mysql/使用视图.md
@@ -1,2 +1,3 @@
 使用视图
-1.为什么使用视图
+22.1.2    视图的规则和限制下面是关于视图创建和使用的一些最常见的规则和限制。与表一样，视图必须唯一命名（不能给视图取与别的视图或表相同的名字）。对于可以创建的视图数目没有限制。为了创建视图，必须具有足够的访问权限。这些限制通常由数据库管理人员授予。视图可以嵌套，即可以利用从其他视图中检索数据的查询来构造一个视图。ORDER BY可以用在视图中，但如果从该视图检索数据SELECT中也含有ORDER BY，那么该视图中的ORDER BY将被覆盖。视图不能索引，也不能有关联的触发器或默认值。视图可以和表一起使用。例如，编写一条联结表和视图的SELECT语句。22.2    使用视图在理解什么是视图（以及管理它们的规则及约束）后，我们来看一下视图的创建。视图用CREATE VIEW语句来创建。使用SHOW CREATE VIEW viewname；来查看创建视图的语句。用DROP删除视图，其语法为DROP VIEW viewname;。更新视图时，可以先用DROP再用CREATE，也可以直接用CREATE OR REPLACE VIEW。如果要更新的视图不存在，则第2条更新语句会创建一个视图；如果要更新的视图存在，则第2条更新语句会替换原有视图。22.2.1    利用视图简化复杂的联结视图的最常见的应用之一是隐藏复杂的SQL，这通常都会涉及联结。请看下面的例子：209 图灵社区会员 臭豆腐(StinkBC@gmail.com) 专享 尊重版权
+
