--- a/mysql/使用视图.md
+++ b/mysql/使用视图.md
@@ -1,3 +1,106 @@
 使用视图
-22.1.2    视图的规则和限制下面是关于视图创建和使用的一些最常见的规则和限制。与表一样，视图必须唯一命名（不能给视图取与别的视图或表相同的名字）。对于可以创建的视图数目没有限制。为了创建视图，必须具有足够的访问权限。这些限制通常由数据库管理人员授予。视图可以嵌套，即可以利用从其他视图中检索数据的查询来构造一个视图。ORDER BY可以用在视图中，但如果从该视图检索数据SELECT中也含有ORDER BY，那么该视图中的ORDER BY将被覆盖。视图不能索引，也不能有关联的触发器或默认值。视图可以和表一起使用。例如，编写一条联结表和视图的SELECT语句。22.2    使用视图在理解什么是视图（以及管理它们的规则及约束）后，我们来看一下视图的创建。视图用CREATE VIEW语句来创建。使用SHOW CREATE VIEW viewname；来查看创建视图的语句。用DROP删除视图，其语法为DROP VIEW viewname;。更新视图时，可以先用DROP再用CREATE，也可以直接用CREATE OR REPLACE VIEW。如果要更新的视图不存在，则第2条更新语句会创建一个视图；如果要更新的视图存在，则第2条更新语句会替换原有视图。22.2.1    利用视图简化复杂的联结视图的最常见的应用之一是隐藏复杂的SQL，这通常都会涉及联结。请看下面的例子：209 图灵社区会员 臭豆腐(StinkBC@gmail.com) 专享 尊重版权
+# 创建和操纵表
+
+## 创建表
+
+![image-20220528214038726](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220528214038726.png)
+
+### IF NOT EXITS
+
+创建表时判断表是否存在，如果存在需要删除原来的表才能创建
+
+```sql
+create table if not exists test01 (id01 int)
+```
+
+### 使用NULL值
+
+- NULL
+- NOT NULL
+
+**NULL值是默认的**
+
+
+
+**要注意NULL值和空串不同**
+
+空串是一个有效的值，是NOT NULL
+
+### 主键
+
+==主键可以不是==
+
+如果主键是多个值
+
+则为主键的组合值唯一
+
+
+
+### 使用AUTO_INCREMENT
+
+每个表只允许指定一个AUTO_INCREMENT列
+
+而且必须被索引（如：通过使它成为主键）
+
+#### 覆盖AUTO_INCREMENT
+
+用INSERT可以指定一个值，后续的增量从手动插入的值开始
+
+SELECT  last_insert_id()可以得到最后插入的值
+
+```sql
+SELECT  cust_id LAST_INSERT_ID FROM customers
+```
+
+### 指定默认值
+
+#### DEFAULT
+
+![image-20220530201117091](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220530201117091.png)
+
+### 引擎队列
+
+![image-20220530201244563](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220530201244563.png)
+
+MyISAM是默认的引擎
+
+
+
+## 更新表
+
+**ALTER TABEL**
+
+### 增加一个属性
+
+![image-20220530201952560](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220530201952560.png)
+
+### 删除列
+
+![image-20220530202021632](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220530202021632.png)
+
+### 增加外键
+
+![image-20220530202114942](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220530202114942.png)
+
+```sql
+ALTER TABLE `orderitems`
+ADD CONSTRAINT fk_test
+FOREIGN KEY(`order_num`) REFERENCES orders(`order_num`)
+```
+
+## 删除表
+
+```sql
+DROP TABLE customers
+```
+
+## 重命名表
+
+```sql
+RENAME TABLE customers TO customers2
+```
+
+
+
+# 使用视图
 
