--- a/mysql/使用视图.md
+++ b/mysql/使用视图.md
@@ -1,106 +1,78 @@
 使用视图
-# 创建和操纵表
+## 视图
 
-## 创建表
+### 什么是视图
 
-![image-20220528214038726](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220528214038726.png)
+- 虚拟表，不是真的包含数据
+- 是一个SQL查询
 
-### IF NOT EXITS
+### 为什么使用视图
 
-创建表时判断表是否存在，如果存在需要删除原来的表才能创建
+- 重用SQL语句
+- 简化复杂的SQL操作
+- 使用表的组成部分而不是整个表
+- 保护数据。可以给用户授予表的特定部分的访问权限而不是整个表的访问权限
+- 更改数据格式和表示
 
-```sql
-create table if not exists test01 (id01 int)
-```
+### 对视图进行操作
 
-### 使用NULL值
+- 可以对视图进行select操作
+- 可以对视图过滤和排序数据
+- 将视图联结到其他视图或者表
+- 还能添加和更新数据
 
-- NULL
-- NOT NULL
+### 视图的规则和限制
 
-**NULL值是默认的**
+- 视图必须唯一命名
+- 创建视图需要有足够的访问全限
+- 可以嵌套，即可以利用从其他视图中检索出的数据构造视图
+- order by可以用在视图中，但是如果从视图中检索数据的select中也包含order by，则视图中的order by会被覆盖
+- 不能被索引，也不能有关联的触发器或默认值
+- 可以和表一起使用
 
+## 使用视图
 
+创建视图——CREATE VIEW
 
-**要注意NULL值和空串不同**
+删除视图——drop VIEW viewname
 
-空串是一个有效的值，是NOT NULL
+更新视图——CREATE OR REPLACE VIEW
 
-### 主键
+### 使用视图简化复杂的联结
 
-==主键可以不是==
+![image-20220602232118976](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220602232118976.png)
 
-如果主键是多个值
+![image-20220602232140461](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220602232140461.png)
 
-则为主键的组合值唯一
+### 用视图重新格式化检索出的数据
 
-
-
-### 使用AUTO_INCREMENT
-
-每个表只允许指定一个AUTO_INCREMENT列
-
-而且必须被索引（如：通过使它成为主键）
-
-#### 覆盖AUTO_INCREMENT
-
-用INSERT可以指定一个值，后续的增量从手动插入的值开始
-
-SELECT  last_insert_id()可以得到最后插入的值
-
-```sql
-SELECT  cust_id LAST_INSERT_ID FROM customers
-```
-
-### 指定默认值
-
-#### DEFAULT
-
-![image-20220530201117091](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220530201117091.png)
-
-### 引擎队列
-
-![image-20220530201244563](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220530201244563.png)
-
-MyISAM是默认的引擎
+![image-20220602232258449](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220602232258449.png)
 
 
 
-## 更新表
+### 用视图过滤不想要的数据
 
-**ALTER TABEL**
+![image-20220602232520143](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220602232520143.png)
 
-### 增加一个属性
-
-![image-20220530201952560](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220530201952560.png)
-
-### 删除列
-
-![image-20220530202021632](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220530202021632.png)
-
-### 增加外键
-
-![image-20220530202114942](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220530202114942.png)
-
-```sql
-ALTER TABLE `orderitems`
-ADD CONSTRAINT fk_test
-FOREIGN KEY(`order_num`) REFERENCES orders(`order_num`)
-```
-
-## 删除表
-
-```sql
-DROP TABLE customers
-```
-
-## 重命名表
-
-```sql
-RENAME TABLE customers TO customers2
-```
+![image-20220602232612567](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220602232612567.png)
 
 
 
-# 使用视图
+### 使用视图与计算字段
+
+![image-20220602232754455](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220602232754455.png)
+
+
+
+### 更新视图
+
+更新视图是更新基表
+
+以下不能进行视图的更新：
+
+![image-20220602232942179](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220602232942179.png)
+
+![image-20220602232947455](https://buketyzl.oss-cn-qingdao.aliyuncs.com/image-20220602232947455.png)
+
+
 
