--- a/日志.md
+++ b/日志.md
@@ -25,3 +25,56 @@
 
 
 - [ ] mysql日志文件为什么这么大
+
+## MySQL突然抖一下
+
+平时更新很快，但是突然很慢，可能是flush脏页
+
+### flush的场景
+
+1. redo log写满了（尽量避免）
+
+   尽量避免，因为系统会停止所有更新操作，把 checkpoint往前推进，redo log留出空间可以继续写
+
+2. 系统内存不足（比较常见）
+
+   需要淘汰页，如果淘汰脏页，需要写入磁盘
+
+   如果一次查询淘汰的脏页个数太多，会导致响应时间明显变长
+
+3. 空闲时候
+
+4. 正常关闭
+
+   会把所有脏页写到磁盘上
+
+
+
+**InnoDB 用缓冲池（buffer pool b）管理内存**，缓冲池中的内存页有三种状态：
+
+第一种是，还没有使用的； 
+
+第二种是，使用了并且是干净页； 
+
+第三种是，使用了并且是脏页。
+
+
+
+刷脏页虽然是常态，但是出现以下这两种情况，都是会明显影响性能的： 
+
+1. 一个查询要淘汰的脏页个数太多，会导致查询的响应时间明显变长； 
+
+2. 日志写满，更新全部堵住，写性能跌为0，这种情况对敏感业务来说，是不能接受的。 
+
+### InnoDB刷脏页的控制策略
+
+1. 要正确告诉MySQL主机的IO能力，`nnodb_io_capacity`
+2. 会根据脏页比例算出刷脏页的速度，所以平时要多关注脏页比例，不要让它经常接近**75%**
+
+### Redo log过小的情况
+
+就会很快被写满；
+
+现象就是磁盘压力很小，但是数据库出现间歇性的性能下跌
+
+而且change buffer的优化也会失效，因为会一直触发merge操作
